--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,6 @@
         "squizlabs/php_codesniffer": "^3.2",
         "jakub-onderka/php-parallel-lint": "^1.0",
         "johnpbloch/wordpress" : "*",
-        "Desertsnowman/caldera-forms" : "dev-develop"
+        "Desertsnowman/caldera-forms" : "dev-project/admin-refactor"
     }
 }
