--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
     "scripts" : {
         "tests" : "composer fixes && composer sniffs && composer test:unit && composer wp:tests",
         "test:unit": "phpunit --testsuite=unit",
-        "wp:install": "bash ./bin/install-docker.sh",
+        "wp:install": "bash ./bin/install-docker.sh && wp:config",
+        "wp:config": "docker-compose run --rm cli wp rewrite structure '/%postname%/'",
         "wp:start": "docker-compose up -d",
         "wp:tests": "docker-compose run --rm wordpress_phpunit phpunit --configuration phpunit-integration.xml.dist",
         "wp:destroy": "docker-compose rm --stop --force",
