--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "caldera-admin",
   "version": "0.1.0",
   "public": "true",
+  "license": "GPL-2.0",
   "dependencies": {
-    "@caldera-labs/admin-client": "^0.1.0",
-    "@caldera-labs/api-client": "^0.3.0",
-    "@caldera-labs/components": "^1.6.0",
-    "@caldera-labs/processor-ui": "^0.5.0",
-    "@caldera-labs/state": "^0.7.0",
+    "@caldera-labs/admin-client": "^0.3",
+    "@caldera-labs/api-client": "^0.3",
+    "@caldera-labs/components": "^1.6",
+    "@caldera-labs/processor-ui": "^0.5",
+    "@caldera-labs/state": "^0.7",
     "classnames": "^2.2.6",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
@@ -23,7 +24,7 @@
     "test:once": "CI=true react-scripts test --env=jsdom",
     "test:coverage": "npm test -- --coverage",
     "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
-    "lint": "eslint src/components/**"
+    "lint": "eslint src/**/*.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
