--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "@wordpress/components": "^1.0.1",
     "@wordpress/compose": "^1.0.2",
     "@wordpress/data": "^1.0.1",
+    "@wordpress/dom-ready": "^1.2.0",
     "@wordpress/element": "^1.0.2",
+    "classnames": "^2.2.6",
     "deepmerge": "^2.1.1",
     "dot-object": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
     "locutus": "^2.0.9",
     "moment": "^2.22.2",
-    "react-data-grid": "^4.0.7",
-    "react-oembed-container": "^0.3.0",
-    "react-table": "^6.8.6",
-    "classnames": "^2.2.6",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
+    "react-data-grid": "^4.0.7",
     "react-dom": "^16.4.1",
+    "react-oembed-container": "^0.3.0",
     "react-router-dom": "^4.3.1",
+    "react-table": "^6.8.6",
     "react-wp-scripts": "0.2.0"
   },
   "scripts": {
