--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "test:once": "CI=true react-scripts test --env=jsdom",
     "test:coverage": "npm test -- --coverage",
     "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.js",
+    "flow:watch": "flow-watch",
+    "flow": "flow "
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -53,6 +55,7 @@
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-react": "^7.9.1",
     "flow-bin": "^0.79.1",
+    "flow-watch": "^1.1.3",
     "react-redux": "^5.0.7",
     "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0"
