--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "public": "true",
   "license": "GPL-2.0",
+  "main": "src/index.js",
+  "repository": "git@github.com:CalderaWP/caldera-admin.git",
+  "author": "Josh Pollock <josh@calderawp.com>",
+  "private": false,
   "dependencies": {
     "@caldera-labs/api-client": "0",
     "@caldera-labs/components": "^1.6.0",
@@ -17,10 +21,12 @@
     "deepmerge": "^2.1.1",
     "dot-object": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
+    "hoist-non-react-statics": "^3.0.1",
     "locutus": "^2.0.9",
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
+    "react-css-grid": "^2.0.0-0",
     "react-data-grid": "^4.0.7",
     "react-dom": "^16.4.1",
     "react-oembed-container": "^0.3.0",
@@ -59,9 +65,6 @@
     "react-redux": "^5.0.7",
     "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0"
-  },
-  "main": "src/index.js",
-  "repository": "git@github.com:CalderaWP/caldera-admin.git",
-  "author": "Josh Pollock <josh@calderawp.com>",
-  "private": false
+  }
+
 }
