search forms list

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "enzyme-to-json": "^3.3.4",
     "hoist-non-react-statics": "^3.0.1",
     "locutus": "^2.0.9",
+    "lodash.filter": "^4.6.0",
+    "lodash.sortby": "^4.7.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
@@ -66,5 +68,4 @@
     "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0"
   }
-
 }
