--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Josh Pollock <josh@calderawp.com>",
   "private": false,
   "dependencies": {
-    "@caldera-labs/api-client": "0",
+    "@caldera-labs/api-client": "^0.6",
     "@caldera-labs/components": "^1.6.0",
     "@caldera-labs/processor-ui": "^0.5.0",
     "@caldera-labs/state": "^0.9",
@@ -65,6 +65,7 @@
     "eslint-plugin-react": "^7.9.1",
     "flow-bin": "^0.79.1",
     "flow-watch": "^1.1.3",
+    "jshint": "^2.9.6",
     "react-redux": "^5.0.7",
     "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0"
