make pagination work right

--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "react-data-grid": "^4.0.7",
     "react-dom": "^16.4.1",
     "react-oembed-container": "^0.3.0",
-    "react-router-dom": "^4.3.1",
     "react-table": "^6.8.6",
-    "react-wp-scripts": "0.2.0"
+    "react-wp-scripts": "0.2.0",
+    "simple-react-router": "0.0.17"
   },
   "scripts": {
     "start": "react-wp-scripts start",
